--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -21,7 +21,7 @@
     <string name="logo">logo</string>
     <string name="display_animations_title">Affichage et animations</string>
     <string name="multishit_title">Multimerdes</string>
-    <string name="transparency_porn_title">Porno de panneaux</string>
+    <string name="transparency_porn_title">Transparence</string>
     <string name="notificaitons_title">Tiroir de notification</string>
     <string name="statubar_title">Barre d\'état</string>
     <string name="lockscreen_title">Écran de déverrouillage</string>
