AS: Updated NL translations by Eric van Bokhoven
Change-Id: I9bda23e8692e5470560f408ae695727f80a11919

--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -3,7 +3,6 @@
 <resources>
     <string name="navigation_drawer_open">Open navigatiezone</string>
     <string name="navigation_drawer_close">Sluit navigatiezone</string>
-
     <string name="action_settings">Instellingen</string>
     <string name="first_layout_title">Ruimte voor diverse shit en naakte chicks!</string>
     <string name="second_layout_title">Tweede layout</string>
@@ -724,7 +723,6 @@
     <!-- Screenshot sound -->
     <string name="screenshot_sound_title">Geluid schermafbeelding</string>
     <string name="screenshot_sound_summary">Speelt een geluid af bij het maken van een schermafbeelding</string>
-
     <string name="brightness_icon_title">Helderheid icoon</string>
     <string name="brightness_icon_summary">Toon een icoon aan de linkerkant van de helderheids-schuifregelaar om de automatische helderheid in te stellen</string>
 
@@ -935,5 +933,9 @@
     <string name = "qs">Aanpassingen Snelle Instellingen</string>
     <string name = "vol_diag">Aanpassingen dialoogvenster Volume</string>
     <string name = "power">Aanpassingen Aan-/Uit-menu</string>
+
+    <!-- Fingerprint authentication vibration -->
+    <string name="fprint_sucess_vib_title">Trillen vingerafdruk-verificatie</string>
+    <string name="fprint_sucess_vib_summary">Trillen bij succesvolle vingerafdruk-verificatie</string>
 
 </resources>
