AE: Boot dialog pimping (2/2)
Change-Id: I844d8e801c0e96e86ce47f7281989c59e142cdb2
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -942,4 +942,14 @@
     <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
     <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
 
+    <!-- YBoot dialog -->
+    <string name="boot_dialog_title">Boot dialog</string>
+    <string name="boot_dialog_bg_color_title">Background color</string>
+    <string name="boot_dialog_stroke_color_title">Stroke color</string>
+    <string name="boot_dialog_stroke_thickness_title">Stroke thickness</string>
+    <string name="boot_dialog_corner_radius_title">Corner radius</string>
+    <string name="boot_dialog_pimping_test_title">Test it out</string>
+    <string name="boot_dialog_test_title">Aicp is starting</string>
+    <string name="boot_dialog_test_message">Optimizing apps...</string>
+
 </resources>
