AE: BootDialog: Custom title (1/2)
Change-Id: Iab20bde07e21595d83e7932fc67f224b230cad86

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -951,5 +951,9 @@
     <string name="boot_dialog_pimping_test_title">Test it out</string>
     <string name="boot_dialog_test_title">Aicp is starting</string>
     <string name="boot_dialog_test_message">Optimizing apps...</string>
+    <string name="boot_dialog_custom_title">Custom title</string>
+    <string name="boot_dialog_custom_title_notset">Custom title currently not set</string>
+    <string name="boot_dialog_custom_explain">Please enter a new label. Leave blank to revert to stock label.</string>
+    <string name="boot_dialog_starting"> is starting\u2026</string>
 
 </resources>
