BootDialog: Added background pimping category
Change-Id: I24ecad2a283063bf142ea9f9578258296818296b
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -944,6 +944,8 @@
 
     <!-- YBoot dialog -->
     <string name="boot_dialog_title">Boot dialog</string>
+    <string name="boot_dialog_bg_category_title">Background</string>
+    <string name="boot_dialog_pimping_title">Background customization</string>
     <string name="boot_dialog_bg_color_title">Background color</string>
     <string name="boot_dialog_stroke_color_title">Stroke color</string>
     <string name="boot_dialog_stroke_thickness_title">Stroke thickness</string>
