BootDialog: Use same string as in fwb
Change-Id: Id1df97e48b49a51efac33177c0ff67fd06079f5b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -956,7 +956,7 @@
     <string name="boot_dialog_custom_title">Custom title</string>
     <string name="boot_dialog_custom_title_notset">Custom title currently not set</string>
     <string name="boot_dialog_custom_explain">Please enter a new label. Leave blank to revert to stock label.</string>
-    <string name="boot_dialog_starting">is starting\u2026</string>
+    <string name="boot_dialog_starting">is booting up\u2026</string>
     <string name="boot_dialog_title_color_title">Title color</string>
     <string name="boot_dialog_mesage_color_title">Message color</string>
     <string name="boot_dialog_random_title">Package name with random color</string>
