AE: Notifications transparency (2/2)
Change-Id: Ife852292276c0aaf052e1febb55ddc297a3c2ae6
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -782,6 +782,9 @@
     <!-- Power/reboot dialogs dim amount -->
     <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
 
+    <!-- Notifications transparency -->
+    <string name="notifications_transparency">Notifications transparency</string>
+
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Lockscreen torch</string>
     <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
