--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -782,6 +782,9 @@
     <!-- Power/reboot dialogs dim amount -->
     <string name="power_menu_dialog_dim">Displayabdunklung</string>
 
+    <!-- Notifications transparency -->
+    <string name="notifications_transparency">Transparenz: Benachrichtigungen</string>
+
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Taschenlampe bei Sperrbildschirm</string>
     <string name="keyguard_torch_summary">Ein/Aus-Taste während der Bildschirmsperre lange drücken, um die Taschenlampe einzuschalten</string>
