--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="hidden_anim_more_title">MORE?</string>
     <string name="hidden_anim_more_nice">NICE</string>
     <string name="continue_title">Continue</string>
+    <string name="settings_activity_title">AE settings</string>
 
     <string name="nothing_title">Nothing to see here yet, move along</string>
 
