AE: Add Settings for AE and initial tunables (2/2)
Change-Id: I5394849a2d80b0fcc76710168e397830ccc4ccd7
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="hidden_anim_more_title">MORE?</string>
     <string name="hidden_anim_more_nice">NICE</string>
     <string name="continue_title">Continue</string>
+    <string name="settings_activity_title">AE settings</string>
 
     <string name="nothing_title">Nothing to see here yet, move along</string>
 
@@ -945,7 +946,7 @@
     <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
     <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
 
-    <!-- YBoot dialog -->
+    <!-- Boot dialog -->
     <string name="boot_dialog_title">Boot dialog</string>
     <string name="boot_dialog_bg_category_title">Background</string>
     <string name="boot_dialog_pimping_title">Background customization</string>
@@ -963,5 +964,10 @@
     <string name="boot_dialog_title_color_title">Title color</string>
     <string name="boot_dialog_mesage_color_title">Message color</string>
     <string name="boot_dialog_random_title">Package name with random color</string>
+
+    <!-- AE settings -->
+    <string name="ae_settings_title">AicpExtas settings</string>
+    <string name="ae_drawer_opacity_title">Navigation drawer opacity</string>
+    <string name="ae_drawer_bg_color_title">Navigation drawer bg color</string>
 
 </resources>
