AE: Reorganize header a little and add header bg (2/2)
Change-Id: I71b36e37d49569769441cf64e8624031040ea071

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -973,5 +973,6 @@
     <string name="settings_info_summary">AE needs to be restarted for the changes to take effect.</string>
     <string name="ae_settings_restore_defaults_title">Restore defaults</string>
     <string name="values_restored_title">Values restored</string>
+    <string name="ae_header_bg_image_opacity_title">Navigation drawer header bg image opacity</string>
 
 </resources>
