AE: Navigation drawer text color settings (2/2)
Change-Id: I2781f48afc469e0e2bb31545b072931e0f79d7e7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -974,5 +974,7 @@
     <string name="ae_settings_restore_defaults_title">Restore defaults</string>
     <string name="values_restored_title">Values restored</string>
     <string name="ae_header_bg_image_opacity_title">Navigation drawer header bg image opacity</string>
+    <string name="ae_nav_drawer_checked_text_title">Selected item text color</string>
+    <string name="ae_nav_drawer_unchecked_text_title">Item text color</string>
 
 </resources>
