AE custom colors switch (2/2)
Allow theming when off

Change-Id: I5d7b70d1e47342e86e8ae82725a5f9dc3ee30623

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -967,6 +967,8 @@
 
     <!-- AE settings -->
     <string name="ae_settings_title">AicpExtas settings</string>
+    <string name="ae_custom_colors_title">Custom colors</string>
+    <string name="ae_custom_colors_summaries">Use the settings below to modify the AE appearance</string>
     <string name="ae_drawer_opacity_title">Navigation drawer opacity</string>
     <string name="ae_drawer_bg_color_title">Navigation drawer bg color</string>
     <string name="settings_info_title">AicpExtras Settings</string>
