--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -990,6 +990,8 @@
     <string name="halo_notification_msgbox_summary">Show message box for incoming notifications</string>
     <string name="halo_unlock_ping_title">Ping on unlock</string>
     <string name="halo_unlock_ping_summary">Halo will ping when device is unlocked if new notifications were received</string>
+    <string name="halo_enable_title">Show Halo button</string>
+    <string name="halo_enable_summary">Enable Halo button in statusbar header</string>
 
     <string name="halo_size_title">Halo size</string>
     <string name="halo_size_summary">Defines how big Halo is going to be</string>
