HALO: Floating mode notifications toggle[2/2]
AICPfy:
- Add dependency to other Preference
- Use proper Switch preference (Secure)

Change-Id: Ic59d8ef7f458a4d65fe3776a984f81df7af24d51
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -992,6 +992,8 @@
     <string name="halo_unlock_ping_summary">Halo will ping when device is unlocked if new notifications were received</string>
     <string name="halo_enable_title">Show Halo button</string>
     <string name="halo_enable_summary">Enable Halo button in statusbar header</string>
+    <string name="halo_floating_notifications_title">Use Floating Mode</string>
+    <string name="halo_floating_notifications_summary">Always launch activities from notifications in Float Mode.</string>
 
     <string name="halo_size_title">Halo size</string>
     <string name="halo_size_summary">Defines how big Halo is going to be</string>
